--- a/sign_in_page.html
+++ b/sign_in_page.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="ruy.css">
+   <link rel="stylesheet" href="sign.css">
    <title>Document</title>
 </head>
 <body>
@@ -22,10 +22,13 @@
            <label for="">Password</label>
        </div>
        <input type="submit" value="Log in">
-       <div class="signinpagelink"><a href="ruy_log_1">Not a member? Sign-up</a></div>
+       <p></p>
+       <div class="signuppagelink"><a href="sign_up_page.html">Not a member? Sign-up</a></div>
+       <p></p>
        <div class="reference">The styling was made thanks to CodingNepal</div>
    </form>
    </div>
 </body>
 </html>
+
 
