--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -4,13 +4,13 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="ruy.css">
+   <link rel="stylesheet" href="sign.css">
    <title>Document</title>
 </head>
 <body>
    <div class="main_section">
        <h1>Sign In</h1>
-       <form action="">
+       <form action="sign_in_page.html">
            <div class="textfield">
                <input type="text" required>
                <label for="">Username</label>
@@ -58,10 +58,11 @@
  
           
            <input type="submit" value="Sign in">
-           <div class="loginpagelink"><a href="ruy_log_2.html">Log in</a></div>
+           <div class="loginpagelink"><a href="sign_in_page.html">Log in</a></div>
+           <div class="skiploginsignin"><a href="goals_page.html">Skip sign In</a></div>
+           <p></p>
            <div class="reference">The styling was made thanks to CodingNepal</div>
        </form>
        </div>
 </body>
 </html>
-
