--- a/goals_page.html
+++ b/goals_page.html
@@ -47,7 +47,11 @@
         </div>
 
         <input type="submit" value="Enter goal">
-        <div class="signinpagelink"><a href="sign_in_page.html">Return to login</a></div></div>
+        <p></p>
+        <div class="signinpagelink"><a href="sign_in_page.html">Return to login</a></div>
+        <p></p>
+        <div class="reference">The styling was made thanks to CodingNepal</div>
+    </div>
 
 
       
