--- a/existing_goals_page.html
+++ b/existing_goals_page.html
@@ -9,7 +9,7 @@
     <h1>Existing goals</h1>
 </head>
 <body>
-    <ol numbered>
+    <ol class="numbered">
     <div class = "goal"><li> </label><input type="checkbox"> <label for=""> Goal #1</label></li> 
             <p>28-01-2023</p>
             <p>I want to improve my ability to solve Taylor series related problems.</p>
