--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -12,48 +12,48 @@
        <h1>Sign In</h1>
        <form action="sign_in_page.html">
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Username</label>
+            <input type="text" id="username" required minlength="5" maxlength="12">
+           <label for="">Username</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">ID</label>
+            <input type="text" id="id" placeholder="ID(Optional)">
+           <label for=""></label>
            </div>
            <div class="textfield">
-               <input type="password" required>
-               <label for="">Password</label>
+            <input type="text" id="password" required minlength="12">
+            <label for="">Password</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Name</label>
+            <input type="text" id="name"required>
+            <label for="">Name</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Address</label>
+            <input type="text" id="address" placeholder="Address(Optional)">
+            <label for=""></label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Country</label>
+            <input type="text" id="country"required>
+            <label for="">Country</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">ZIP-code</label>
+            <input type="text" id="zip-code"required pattern="\d\d\d\d\w\w">
+            <label for="">ZIP-code</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Web-mail</label>
+            <input type="email" id="e-mail"required>
+            <label for="">E-mail</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Sex?</label>
+            <input type="text" id="sex"required>
+            <label for="">Sex?</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">Language</label>
+            <input type="text" id="language"required>
+            <label for="">Language</label>
            </div>
            <div class="textfield">
-               <input type="text" required>
-               <label for="">About/Bio</label>
+            <input type="text" id="about" placeholder="About/Bio(Optional)">
+            <label for=""></label>
            </div>
  
           
@@ -65,4 +65,5 @@
        </form>
        </div>
 </body>
+
 </html>
